--- a/eagle-xl/auto_plotter/stellar_mass_halo_mass.yml
+++ b/eagle-xl/auto_plotter/stellar_mass_halo_mass.yml
@@ -1,145 +1,13 @@
-stellar_mass_halo_mass_M200_all_100:
-  type: "scatter"
-  legend_loc: "lower right"
-  x:
-    quantity: "masses.mass_200crit"
-    units: Solar_Mass
-    start: 1e6
-    end: 3e14
-  y:
-    quantity: "apertures.mass_star_100_kpc"
-    units: Solar_Mass
-    start: 1e6
-    end: 1e12
-  median:
-    plot: true
-    log: true
-    adaptive: true
-    number_of_bins: 25
-    start:
-      value: 1e6
-      units: Solar_Mass
-    end:
-      value: 1e14
-      units: Solar_Mass
-  metadata:
-    title: Stellar Mass-Halo Mass relation (100 kpc aperture, M$_{200}$)
-    caption: Includes all haloes, including subhaloes.
-    section: Stellar Mass-Halo Mass
-  observational_data:
-    - filename: GalaxyStellarMassHaloMass/Moster2013.hdf5
-    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_M200.hdf5
-
-stellar_mass_halo_mass_MBN98_all_100:
-  type: "scatter"
-  legend_loc: "lower right"
-  x:
-    quantity: "masses.mass_bn98"
-    units: Solar_Mass
-    start: 1e6
-    end: 3e14
-  y:
-    quantity: "apertures.mass_star_100_kpc"
-    units: Solar_Mass
-    start: 1e6
-    end: 1e12
-  median:
-    plot: true
-    log: true
-    adaptive: true
-    number_of_bins: 25
-    start:
-      value: 1e6
-      units: Solar_Mass
-    end:
-      value: 1e14
-      units: Solar_Mass
-  metadata:
-    title: Stellar Mass-Halo Mass relation (100 kpc aperture, M$_{\rm BN98}$)
-    caption: Includes all haloes, including subhaloes.
-    section: Stellar Mass-Halo Mass
-  observational_data:
-    - filename: GalaxyStellarMassHaloMass/Behroozi2019.hdf5
-    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98.hdf5
-
-stellar_mass_halo_mass_M200_centrals_100:
-  type: "scatter"
-  select_structure_type: 10
-  comment: "Centrals only"
-  legend_loc: "lower right"
-  x:
-    quantity: "masses.mass_200crit"
-    units: Solar_Mass
-    start: 1e9
-    end: 3e14
-  y:
-    quantity: "apertures.mass_star_100_kpc"
-    units: Solar_Mass
-    start: 1e6
-    end: 1e12
-  median:
-    plot: true
-    log: true
-    adaptive: true
-    number_of_bins: 25
-    start:
-      value: 1e9
-      units: Solar_Mass
-    end:
-      value: 1e14
-      units: Solar_Mass
-  metadata:
-    title: Stellar Mass-Halo Mass relation (100 kpc aperture, centrals only, M$_{200}$)
-    caption: Includes only central haloes.
-    section: Stellar Mass-Halo Mass
-  observational_data:
-    - filename: GalaxyStellarMassHaloMass/Moster2013.hdf5
-    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_M200.hdf5
-
-stellar_mass_halo_mass_MBN98_centrals_100:
-  type: "scatter"
-  select_structure_type: 10
-  comment: "Centrals only"
-  legend_loc: "lower right"
-  x:
-    quantity: "masses.mass_bn98"
-    units: Solar_Mass
-    start: 1e9
-    end: 3e14
-  y:
-    quantity: "apertures.mass_star_100_kpc"
-    units: Solar_Mass
-    start: 1e6
-    end: 1e12
-  median:
-    plot: true
-    log: true
-    adaptive: true
-    number_of_bins: 25
-    start:
-      value: 1e9
-      units: Solar_Mass
-    end:
-      value: 1e14
-      units: Solar_Mass
-  metadata:
-    title: Stellar Mass-Halo Mass relation (100 kpc aperture, centrals only, M$_{\rm BN98}$)
-    caption: Includes only central haloes.
-    section: Stellar Mass-Halo Mass
-  observational_data:
-    - filename: GalaxyStellarMassHaloMass/Behroozi2019.hdf5
-    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98.hdf5
-      
 stellar_mass_halo_mass_M200_centrals_ratio_100:
   type: "scatter"
   select_structure_type: 10
   comment: "Centrals only"
-  legend_loc: "lower right"
+  legend_loc: "upper left"
   x:
     quantity: "masses.mass_200crit"
     units: Solar_Mass
     start: 1e9
-    end: 3e14
+    end: 1e14
   y:
     quantity: "derived_quantities.stellar_mass_to_halo_mass_200crit_100_kpc"
     units: "dimensionless"
@@ -148,6 +16,7 @@ stellar_mass_halo_mass_M200_centrals_ratio_100:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 25
     start:
       value: 1e9
@@ -156,18 +25,53 @@ stellar_mass_halo_mass_M200_centrals_ratio_100:
       value: 1e14
       units: Solar_Mass
   metadata:
-    title: Stellar Mass-Halo Mass relation (ratio, 100 kpc aperture, centrals only, M$_{200}$)
+    title: Stellar Mass-Halo Mass relation (ratio, 100 kpc aperture, $M_{200,crit}$, centrals only)
     caption: Includes only central haloes.
     section: Stellar Mass-Halo Mass
   observational_data:
     - filename: GalaxyStellarMassHaloMass/Moster2013Ratio.hdf5
     - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_M200_Ratio.hdf5
+    - filename: GalaxyStellarMassHaloMass/Read2017_Ratio.hdf5
+
+stellar_mass_halo_mass_MBN98_centrals_ratio_100:
+  type: "scatter"
+  select_structure_type: 10
+  comment: "Centrals only"
+  legend_loc: "upper left"
+  x:
+    quantity: "masses.mass_bn98"
+    units: Solar_Mass
+    start: 1e9
+    end: 1e14
+  y:
+    quantity: "derived_quantities.stellar_mass_to_halo_mass_bn98_100_kpc"
+    units: "dimensionless"
+    start: 1e-4
+    end: 1e-1
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 25
+    start:
+      value: 1e9
+      units: Solar_Mass
+    end:
+      value: 1e14
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (ratio, 100 kpc aperture, $M_{\rm BN98}$, centrals only)
+    caption: Includes only central haloes.
+    section: Stellar Mass-Halo Mass
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Behroozi2019Ratio.hdf5
+    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98_Ratio.hdf5
 
 stellar_mass_halo_mass_M200_centrals_ratio_stellar_100:
   type: "scatter"
   select_structure_type: 10
   comment: "Centrals only"
-  legend_loc: "lower left"
+  legend_loc: "upper left"
   x:
     quantity: "apertures.mass_star_100_kpc"
     units: Solar_Mass
@@ -190,93 +94,60 @@ stellar_mass_halo_mass_M200_centrals_ratio_stellar_100:
       value: 1e12
       units: Solar_Mass
   metadata:
-    title: Stellar Mass-Halo Mass relation (ratio, 100 kpc aperture, centrals only, stellar x-axis, M$_{200}$)
+    title: Stellar Mass-Halo Mass relation (ratio, 100 kpc aperture, $M_{200,crit}$, centrals only, stellar x-axis)
     caption: Includes only central haloes.
     section: Stellar Mass-Halo Mass
   observational_data:
     - filename: GalaxyStellarMassHaloMass/Moster2013RatioStellar.hdf5
     - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_M200_RatioStellar.hdf5
-
-stellar_mass_halo_mass_M200_all_30:
+    - filename: GalaxyStellarMassHaloMass/Read2017_RatioStellar.hdf5
+      
+stellar_mass_halo_mass_MBN98_centrals_ratio_stellar_100:
   type: "scatter"
-  legend_loc: "lower right"
-  x:
-    quantity: "masses.mass_200crit"
-    units: Solar_Mass
-    start: 1e6
-    end: 3e14
-  y:
-    quantity: "apertures.mass_star_30_kpc"
-    units: Solar_Mass
-    start: 1e6
-    end: 1e12
-  median:
-    plot: true
-    log: true
-    adaptive: true
-    number_of_bins: 25
-    start:
-      value: 1e6
-      units: Solar_Mass
-    end:
-      value: 1e14
-      units: Solar_Mass
-  metadata:
-    title: Stellar Mass-Halo Mass relation (30 kpc aperture, M$_{200}$)
-    caption: Includes all haloes, including subhaloes.
-    section: Stellar Mass-Halo Mass
-    show_on_webpage: false
-  observational_data:
-    - filename: GalaxyStellarMassHaloMass/Moster2013.hdf5
-    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_M200.hdf5
-
-stellar_mass_halo_mass_MBN98_all_30:
-  type: "scatter"
-  legend_loc: "lower right"
-  x:
-    quantity: "masses.mass_bn98"
-    units: Solar_Mass
-    start: 1e6
-    end: 3e14
-  y:
-    quantity: "apertures.mass_star_30_kpc"
-    units: Solar_Mass
-    start: 1e6
-    end: 1e12
-  median:
-    plot: true
-    log: true
-    adaptive: true
-    number_of_bins: 25
-    start:
-      value: 1e6
-      units: Solar_Mass
-    end:
-      value: 1e14
-      units: Solar_Mass
-  metadata:
-    title: Stellar Mass-Halo Mass relation (30 kpc aperture, M$_{\rm BN98}$)
-    caption: Includes all haloes, including subhaloes.
-    section: Stellar Mass-Halo Mass
-    show_on_webpage: false
-  observational_data:
-    - filename: GalaxyStellarMassHaloMass/Behroozi2019.hdf5
-    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98.hdf5
-
-stellar_mass_halo_mass_M200_centrals_30:
-  type: "scatter"
-  comment: "Centrals only"
-  legend_loc: "lower right"
   select_structure_type: 10
+  comment: "Centrals only"
+  legend_loc: "upper left"
+  x:
+    quantity: "apertures.mass_star_100_kpc"
+    units: Solar_Mass
+    start: 1e7
+    end: 1e12
+  y:
+    quantity: "derived_quantities.stellar_mass_to_halo_mass_bn98_100_kpc"
+    units: "dimensionless"
+    start: 1e-4
+    end: 1e-1
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 25
+    start:
+      value: 91e7
+      units: Solar_Mass
+    end:
+      value: 1e12
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (ratio, 100 kpc aperture, $M_{\rm BN98}$, centrals only, stellar x-axis)
+    caption: Includes only central haloes.
+    section: Stellar Mass-Halo Mass
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Behroozi2019RatioStellar.hdf5
+    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98_RatioStellar.hdf5
+
+stellar_mass_halo_mass_M200_all_100:
+  type: "scatter"
+  legend_loc: "upper left"
   x:
     quantity: "masses.mass_200crit"
     units: Solar_Mass
     start: 1e9
-    end: 3e14
+    end: 1e14
   y:
-    quantity: "apertures.mass_star_30_kpc"
+    quantity: "apertures.mass_star_100_kpc"
     units: Solar_Mass
-    start: 1e6
+    start: 1e7
     end: 1e12
   median:
     plot: true
@@ -290,28 +161,96 @@ stellar_mass_halo_mass_M200_centrals_30:
       value: 1e14
       units: Solar_Mass
   metadata:
-    title: Stellar Mass-Halo Mass relation (30 kpc aperture, centrals only, M$_{200}$)
+    title: Stellar Mass-Halo Mass relation (100 kpc aperture, $M_{200,crit}$)
+    caption: Includes all haloes, including subhaloes.
+    section: Stellar Mass-Halo Mass
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Moster2013.hdf5
+    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_M200.hdf5
+    - filename: GalaxyStellarMassHaloMass/Read2017.hdf5
+
+stellar_mass_halo_mass_MBN98_all_100:
+  type: "scatter"
+  legend_loc: "upper left"
+  x:
+    quantity: "masses.mass_bn98"
+    units: Solar_Mass
+    start: 1e9
+    end: 1e14
+  y:
+    quantity: "apertures.mass_star_100_kpc"
+    units: Solar_Mass
+    start: 1e7
+    end: 1e12
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 25
+    start:
+      value: 1e9
+      units: Solar_Mass
+    end:
+      value: 1e14
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (100 kpc aperture, $M_{\rm BN98}$)
+    caption: Includes all haloes, including subhaloes.
+    section: Stellar Mass-Halo Mass
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Behroozi2019.hdf5
+    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98.hdf5
+
+stellar_mass_halo_mass_M200_centrals_100:
+  type: "scatter"
+  select_structure_type: 10
+  comment: "Centrals only"
+  legend_loc: "upper left"
+  x:
+    quantity: "masses.mass_200crit"
+    units: Solar_Mass
+    start: 1e9
+    end: 1e14
+  y:
+    quantity: "apertures.mass_star_100_kpc"
+    units: Solar_Mass
+    start: 1e7
+    end: 1e12
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 25
+    start:
+      value: 1e9
+      units: Solar_Mass
+    end:
+      value: 1e14
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (100 kpc aperture, $M_{200,crit}$, centrals only)
     caption: Includes only central haloes.
     section: Stellar Mass-Halo Mass
     show_on_webpage: false
   observational_data:
     - filename: GalaxyStellarMassHaloMass/Moster2013.hdf5
     - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_M200.hdf5
+    - filename: GalaxyStellarMassHaloMass/Read2017.hdf5
 
-stellar_mass_halo_mass_MBN98_centrals_30:
+stellar_mass_halo_mass_MBN98_centrals_100:
   type: "scatter"
-  comment: "Centrals only"
-  legend_loc: "lower right"
   select_structure_type: 10
+  comment: "Centrals only"
+  legend_loc: "upper left"
   x:
     quantity: "masses.mass_bn98"
     units: Solar_Mass
     start: 1e9
-    end: 3e14
+    end: 1e14
   y:
-    quantity: "apertures.mass_star_30_kpc"
+    quantity: "apertures.mass_star_100_kpc"
     units: Solar_Mass
-    start: 1e6
+    start: 1e7
     end: 1e12
   median:
     plot: true
@@ -325,7 +264,7 @@ stellar_mass_halo_mass_MBN98_centrals_30:
       value: 1e14
       units: Solar_Mass
   metadata:
-    title: Stellar Mass-Halo Mass relation (30 kpc aperture, centrals only, M$_{\rm BN98}$)
+    title: Stellar Mass-Halo Mass relation (100 kpc aperture, $M_{\rm BN98}$, centrals only)
     caption: Includes only central haloes.
     section: Stellar Mass-Halo Mass
     show_on_webpage: false
@@ -337,12 +276,12 @@ stellar_mass_halo_mass_M200_centrals_ratio_30:
   type: "scatter"
   select_structure_type: 10
   comment: "Centrals only"
-  legend_loc: "lower right"
+  legend_loc: "upper left"
   x:
     quantity: "masses.mass_200crit"
     units: Solar_Mass
     start: 1e9
-    end: 3e14
+    end: 1e14
   y:
     quantity: "derived_quantities.stellar_mass_to_halo_mass_200crit_30_kpc"
     units: "dimensionless"
@@ -357,22 +296,23 @@ stellar_mass_halo_mass_M200_centrals_ratio_30:
       value: 1e9
       units: Solar_Mass
     end:
-      value: 1e14
+      value: 1e13
       units: Solar_Mass
   metadata:
-    title: Stellar Mass-Halo Mass relation (ratio, 30 kpc aperture, centrals only, M$_{200}$)
+    title: Stellar Mass-Halo Mass relation (ratio, 30 kpc aperture, $M_{200,crit}$, centrals only)
     caption: Includes only central haloes.
     section: Stellar Mass-Halo Mass
     show_on_webpage: false
   observational_data:
     - filename: GalaxyStellarMassHaloMass/Moster2013Ratio.hdf5
     - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_M200_Ratio.hdf5
+    - filename: GalaxyStellarMassHaloMass/Read2017_Ratio.hdf5
 
 stellar_mass_halo_mass_M200_centrals_ratio_stellar_30:
   type: "scatter"
   select_structure_type: 10
   comment: "Centrals only"
-  legend_loc: "lower left"
+  legend_loc: "upper left"
   x:
     quantity: "apertures.mass_star_30_kpc"
     units: Solar_Mass
@@ -395,10 +335,81 @@ stellar_mass_halo_mass_M200_centrals_ratio_stellar_30:
       value: 1e12
       units: Solar_Mass
   metadata:
-    title: Stellar Mass-Halo Mass relation (ratio, 30 kpc aperture, centrals only, stellar x-axis, M$_{200}$)
+    title: Stellar Mass-Halo Mass relation (ratio, 30 kpc aperture, $M_{200,crit}$, centrals only, stellar x-axis)
     caption: Includes only central haloes.
     section: Stellar Mass-Halo Mass
     show_on_webpage: false
   observational_data:
     - filename: GalaxyStellarMassHaloMass/Moster2013RatioStellar.hdf5
     - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_M200_RatioStellar.hdf5
+    - filename: GalaxyStellarMassHaloMass/Read2017_RatioStellar.hdf5
+
+stellar_mass_halo_mass_M200_all_30:
+  type: "scatter"
+  legend_loc: "upper left"
+  x:
+    quantity: "masses.mass_200crit"
+    units: Solar_Mass
+    start: 1e9
+    end: 1e14
+  y:
+    quantity: "apertures.mass_star_30_kpc"
+    units: Solar_Mass
+    start: 1e7
+    end: 1e12
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 25
+    start:
+      value: 1e9
+      units: Solar_Mass
+    end:
+      value: 1e14
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (30 kpc aperture, $M_{200,crit}$)
+    caption: Includes all haloes, including subhaloes.
+    section: Stellar Mass-Halo Mass
+    show_on_webpage: false
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Moster2013.hdf5
+    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_M200.hdf5
+    - filename: GalaxyStellarMassHaloMass/Read2017.hdf5
+
+stellar_mass_halo_mass_M200_centrals_30:
+  type: "scatter"
+  select_structure_type: 10
+  comment: "Centrals only"
+  legend_loc: "upper left"
+  x:
+    quantity: "masses.mass_200crit"
+    units: Solar_Mass
+    start: 1e9
+    end: 1e14
+  y:
+    quantity: "apertures.mass_star_30_kpc"
+    units: Solar_Mass
+    start: 1e7
+    end: 1e12
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 25
+    start:
+      value: 1e9
+      units: Solar_Mass
+    end:
+      value: 1e14
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (30 kpc aperture, $M_{200,crit}$, centrals only)
+    caption: Includes only central haloes.
+    section: Stellar Mass-Halo Mass
+    show_on_webpage: false
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Moster2013.hdf5
+    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_M200.hdf5
+    - filename: GalaxyStellarMassHaloMass/Read2017.hdf5
