Added Behroozi passive fractions

--- a/eagle-xl/auto_plotter/star_formation_rates.yml
+++ b/eagle-xl/auto_plotter/star_formation_rates.yml
@@ -309,6 +309,7 @@ stellar_mass_passive_fraction_30:
   observational_data:
     - filename: GalaxyStellarMassPassiveFraction/Gilbank2010.hdf5
     - filename: GalaxyStellarMassPassiveFraction/Moustakas2013.hdf5
+    - filename: GalaxyStellarMassPassiveFraction/Behroozi2019.hdf5
 
 stellar_mass_passive_fraction_100:
   type: "scatter"
@@ -344,6 +345,7 @@ stellar_mass_passive_fraction_100:
   observational_data:
     - filename: GalaxyStellarMassPassiveFraction/Gilbank2010.hdf5
     - filename: GalaxyStellarMassPassiveFraction/Moustakas2013.hdf5
+    - filename: GalaxyStellarMassPassiveFraction/Behroozi2019.hdf5
 
 stellar_mass_passive_fraction_centrals_30:
   type: "scatter"
@@ -382,6 +384,7 @@ stellar_mass_passive_fraction_centrals_30:
   observational_data:
     - filename: GalaxyStellarMassPassiveFraction/Gilbank2010.hdf5
     - filename: GalaxyStellarMassPassiveFraction/Moustakas2013.hdf5
+    - filename: GalaxyStellarMassPassiveFraction/Behroozi2019.hdf5
 
 stellar_mass_passive_fraction_centrals_100:
   type: "scatter"
@@ -419,6 +422,7 @@ stellar_mass_passive_fraction_centrals_100:
   observational_data:
     - filename: GalaxyStellarMassPassiveFraction/Gilbank2010.hdf5
     - filename: GalaxyStellarMassPassiveFraction/Moustakas2013.hdf5
+    - filename: GalaxyStellarMassPassiveFraction/Behroozi2019.hdf5
 
 star_formation_rate_function_100:
   type: "massfunction"
