Added the other luminosity functions

--- a/eagle-xl/auto_plotter/luminosity_functions.yml
+++ b/eagle-xl/auto_plotter/luminosity_functions.yml
@@ -1,3 +1,41 @@
+luminosity_i_function_30:
+  type: "luminosityfunction"
+  legend_loc: "lower left"
+  number_of_bins: 25
+  x:
+    quantity: "derived_quantities.magnitudes_i_band_30_kpc"
+    log: false
+    units: "dimensionless"
+    start: -25
+    end: -12
+  y:
+    units: 1/Mpc**3
+    start: 1e-6
+    end: 0.316 # (1e-0.5)
+  metadata:
+    title: i-band Luminosity Function (30 kpc aperture)
+    caption: 30 kpc aperture dust-free rest-frame luminosity function in the GAMA i-band, constructed using the Trayford et al. (2015) model, showing all galaxies with a fixed bin-width of 0.2 dex.
+    section: Luminosity Function
+
+luminosity_g_function_30:
+  type: "luminosityfunction"
+  legend_loc: "lower left"
+  number_of_bins: 25
+  x:
+    quantity: "derived_quantities.magnitudes_g_band_30_kpc"
+    log: false
+    units: "dimensionless"
+    start: -25
+    end: -12
+  y:
+    units: 1/Mpc**3
+    start: 1e-6
+    end: 0.316 # (1e-0.5)
+  metadata:
+    title: g-band Luminosity Function (30 kpc aperture)
+    caption: 30 kpc aperture dust-free rest-frame luminosity function in the GAMA g-band, constructed using the Trayford et al. (2015) model, showing all galaxies with a fixed bin-width of 0.2 dex.
+    section: Luminosity Function
+
 luminosity_r_function_30:
   type: "luminosityfunction"
   legend_loc: "lower left"
@@ -6,14 +44,146 @@ luminosity_r_function_30:
     quantity: "derived_quantities.magnitudes_r_band_30_kpc"
     log: false
     units: "dimensionless"
-    start: 1e3
-    end: 1e10
+    start: -25
+    end: -12
   y:
     units: 1/Mpc**3
     start: 1e-6
     end: 0.316 # (1e-0.5)
   metadata:
     title: r-band Luminosity Function (30 kpc aperture)
-    caption: 30 kpc aperture luminosity function in the GAMA r-band, showing all galaxies with a fixed bin-width of 0.2 dex.
+    caption: 30 kpc aperture dust-free rest-frame luminosity function in the GAMA r-band, constructed using the Trayford et al. (2015) model, showing all galaxies with a fixed bin-width of 0.2 dex.
     section: Luminosity Function
-    show_on_webpage: false
+
+luminosity_H_function_30:
+  type: "luminosityfunction"
+  legend_loc: "lower left"
+  number_of_bins: 25
+  x:
+    quantity: "derived_quantities.magnitudes_H_band_30_kpc"
+    log: false
+    units: "dimensionless"
+    start: -25
+    end: -12
+  y:
+    units: 1/Mpc**3
+    start: 1e-6
+    end: 0.316 # (1e-0.5)
+  metadata:
+    title: H-band Luminosity Function (30 kpc aperture)
+    caption: 30 kpc aperture dust-free rest-frame luminosity function in the GAMA H-band, constructed using the Trayford et al. (2015) model, showing all galaxies with a fixed bin-width of 0.2 dex.
+    section: Luminosity Function
+
+luminosity_u_function_30:
+  type: "luminosityfunction"
+  legend_loc: "lower left"
+  number_of_bins: 25
+  x:
+    quantity: "derived_quantities.magnitudes_u_band_30_kpc"
+    log: false
+    units: "dimensionless"
+    start: -25
+    end: -12
+  y:
+    units: 1/Mpc**3
+    start: 1e-6
+    end: 0.316 # (1e-0.5)
+  metadata:
+    title: u-band Luminosity Function (30 kpc aperture)
+    caption: 30 kpc aperture dust-free rest-frame luminosity function in the GAMA u-band, constructed using the Trayford et al. (2015) model, showing all galaxies with a fixed bin-width of 0.2 dex.
+    section: Luminosity Function
+
+luminosity_J_function_30:
+  type: "luminosityfunction"
+  legend_loc: "lower left"
+  number_of_bins: 25
+  x:
+    quantity: "derived_quantities.magnitudes_J_band_30_kpc"
+    log: false
+    units: "dimensionless"
+    start: -25
+    end: -12
+  y:
+    units: 1/Mpc**3
+    start: 1e-6
+    end: 0.316 # (1e-0.5)
+  metadata:
+    title: J-band Luminosity Function (30 kpc aperture)
+    caption: 30 kpc aperture dust-free rest-frame luminosity function in the GAMA J-band, constructed using the Trayford et al. (2015) model, showing all galaxies with a fixed bin-width of 0.2 dex.
+    section: Luminosity Function
+
+luminosity_Y_function_30:
+  type: "luminosityfunction"
+  legend_loc: "lower left"
+  number_of_bins: 25
+  x:
+    quantity: "derived_quantities.magnitudes_Y_band_30_kpc"
+    log: false
+    units: "dimensionless"
+    start: -25
+    end: -12
+  y:
+    units: 1/Mpc**3
+    start: 1e-6
+    end: 0.316 # (1e-0.5)
+  metadata:
+    title: Y-band Luminosity Function (30 kpc aperture)
+    caption: 30 kpc aperture dust-free rest-frame luminosity function in the GAMA Y-band, constructed using the Trayford et al. (2015) model, showing all galaxies with a fixed bin-width of 0.2 dex.
+    section: Luminosity Function
+
+luminosity_K_function_30:
+  type: "luminosityfunction"
+  legend_loc: "lower left"
+  number_of_bins: 25
+  x:
+    quantity: "derived_quantities.magnitudes_K_band_30_kpc"
+    log: false
+    units: "dimensionless"
+    start: -25
+    end: -12
+  y:
+    units: 1/Mpc**3
+    start: 1e-6
+    end: 0.316 # (1e-0.5)
+  metadata:
+    title: K-band Luminosity Function (30 kpc aperture)
+    caption: 30 kpc aperture dust-free rest-frame luminosity function in the GAMA K-band, constructed using the Trayford et al. (2015) model, showing all galaxies with a fixed bin-width of 0.2 dex.
+    section: Luminosity Function
+
+luminosity_z_function_30:
+  type: "luminosityfunction"
+  legend_loc: "lower left"
+  number_of_bins: 25
+  x:
+    quantity: "derived_quantities.magnitudes_z_band_30_kpc"
+    log: false
+    units: "dimensionless"
+    start: -25
+    end: -12
+  y:
+    units: 1/Mpc**3
+    start: 1e-6
+    end: 0.316 # (1e-0.5)
+  metadata:
+    title: z-band Luminosity Function (30 kpc aperture)
+    caption: 30 kpc aperture dust-free rest-frame luminosity function in the GAMA z-band, constructed using the Trayford et al. (2015) model, showing all galaxies with a fixed bin-width of 0.2 dex.
+    section: Luminosity Function
+
+luminosity_Z_function_30:
+  type: "luminosityfunction"
+  legend_loc: "lower left"
+  number_of_bins: 25
+  x:
+    quantity: "derived_quantities.magnitudes_Z_band_30_kpc"
+    log: false
+    units: "dimensionless"
+    start: -25
+    end: -12
+  y:
+    units: 1/Mpc**3
+    start: 1e-6
+    end: 0.316 # (1e-0.5)
+  metadata:
+    title: Z-band Luminosity Function (30 kpc aperture)
+    caption: 30 kpc aperture dust-free rest-frame luminosity function in the GAMA Z-band, constructed using the Trayford et al. (2015) model, showing all galaxies with a fixed bin-width of 0.2 dex.
+    section: Luminosity Function
