--- a/bahamas/auto_plotter/baryon_fractions.yml
+++ b/bahamas/auto_plotter/baryon_fractions.yml
@@ -64,6 +64,37 @@ gas_fraction_500:
     - filename: HaloMassGasFractions/Eckert2016.hdf5
     - filename: HaloMassGasFractions/Lovisari2015.hdf5
 
+star_fraction_500:
+  type: "2dhistogram"
+  legend_loc: "upper left"
+  x:
+    quantity: "spherical_overdensities.mass_500_rhocrit"
+    units: Solar_Mass
+    start: 1e11
+    end: 1e15
+  y:
+    quantity: "derived_quantities.star_fraction_true_R500"
+    units:  "dimensionless"
+    log: false
+    start: 0.
+    end: 1.2
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 20
+    start:
+      value: 1e11
+      units: Solar_Mass
+    end:
+      value: 1e15
+      units: Solar_Mass
+  metadata:
+    title: "Halo stellar fractions within $R_{500}$"
+    caption: Stellar fractions within $R_{500}$ normalised by the cosmic mean. These are 'true' values, i.e. no cut or observational correction was applied.
+    section: Baryon Fractions
+
+
 gas_mass_500:
   type: "2dhistogram"
   legend_loc: "upper left"
