--- a/bahamas/auto_plotter/mass_functions.yml
+++ b/bahamas/auto_plotter/mass_functions.yml
@@ -316,3 +316,96 @@ adaptive_stellar_mass_function_50:
     - filename: GalaxyStellarMassFunction/Ilbert2013_z002p500.hdf5
     - filename: GalaxyStellarMassFunction/Ilbert2013_z003p000.hdf5
 
+stellar_mass_eddington_function_30:
+  type: "massfunction"
+  legend_loc: "lower left"
+  number_of_bins: 25
+  x:
+    quantity: "derived_quantities.stellar_mass_eddington_30_kpc"
+    units: Solar_Mass
+    start: 1e9
+    end: 1e13
+  y:
+    units: 1/Mpc**3
+    start: 1e-6
+    end: 0.316 # (1e-0.5)
+  metadata:
+    title: Stellar Mass Function (30 kpc aperture) with Eddington bias
+    caption: 50 kpc aperture GSMF, showing all galaxies with a fixed bin-width of 0.2 dex. Includes Eddington bias.
+    section: Stellar Mass Function
+    show_on_webpage: true
+  observational_data:
+    - filename: GalaxyStellarMassFunction/LiWhite2009.hdf5
+    - filename: GalaxyStellarMassFunction/DSouza2015.hdf5
+    - filename: GalaxyStellarMassFunction/Wright2017.hdf5
+    - filename: GalaxyStellarMassFunction/Ilbert2013_z000p200.hdf5
+    - filename: GalaxyStellarMassFunction/Ilbert2013_z000p500.hdf5
+    - filename: GalaxyStellarMassFunction/Ilbert2013_z000p800.hdf5
+    - filename: GalaxyStellarMassFunction/Ilbert2013_z001p100.hdf5
+    - filename: GalaxyStellarMassFunction/Ilbert2013_z001p500.hdf5
+    - filename: GalaxyStellarMassFunction/Ilbert2013_z002p000.hdf5
+    - filename: GalaxyStellarMassFunction/Ilbert2013_z002p500.hdf5
+    - filename: GalaxyStellarMassFunction/Ilbert2013_z003p000.hdf5
+
+stellar_mass_eddington_function_50:
+  type: "massfunction"
+  legend_loc: "lower left"
+  number_of_bins: 25
+  x:
+    quantity: "derived_quantities.stellar_mass_eddington_50_kpc"
+    units: Solar_Mass
+    start: 1e9
+    end: 1e13
+  y:
+    units: 1/Mpc**3
+    start: 1e-6
+    end: 0.316 # (1e-0.5)
+  metadata:
+    title: Stellar Mass Function (50 kpc aperture) with Eddington bias
+    caption: 50 kpc aperture GSMF, showing all galaxies with a fixed bin-width of 0.2 dex. Includes Eddington bias.
+    section: Stellar Mass Function
+    show_on_webpage: true
+  observational_data:
+    - filename: GalaxyStellarMassFunction/LiWhite2009.hdf5
+    - filename: GalaxyStellarMassFunction/DSouza2015.hdf5
+    - filename: GalaxyStellarMassFunction/Wright2017.hdf5
+    - filename: GalaxyStellarMassFunction/Ilbert2013_z000p200.hdf5
+    - filename: GalaxyStellarMassFunction/Ilbert2013_z000p500.hdf5
+    - filename: GalaxyStellarMassFunction/Ilbert2013_z000p800.hdf5
+    - filename: GalaxyStellarMassFunction/Ilbert2013_z001p100.hdf5
+    - filename: GalaxyStellarMassFunction/Ilbert2013_z001p500.hdf5
+    - filename: GalaxyStellarMassFunction/Ilbert2013_z002p000.hdf5
+    - filename: GalaxyStellarMassFunction/Ilbert2013_z002p500.hdf5
+    - filename: GalaxyStellarMassFunction/Ilbert2013_z003p000.hdf5
+
+stellar_mass_eddington_function_100:
+  type: "massfunction"
+  legend_loc: "lower left"
+  number_of_bins: 25
+  x:
+    quantity: "derived_quantities.stellar_mass_eddington_100_kpc"
+    units: Solar_Mass
+    start: 1e9
+    end: 1e13
+  y:
+    units: 1/Mpc**3
+    start: 1e-6
+    end: 0.316 # (1e-0.5)
+  metadata:
+    title: Stellar Mass Function (100 kpc aperture) with Eddington bias
+    caption: 50 kpc aperture GSMF, showing all galaxies with a fixed bin-width of 0.2 dex. Includes Eddington bias.
+    section: Stellar Mass Function
+    show_on_webpage: true
+  observational_data:
+    - filename: GalaxyStellarMassFunction/LiWhite2009.hdf5
+    - filename: GalaxyStellarMassFunction/DSouza2015.hdf5
+    - filename: GalaxyStellarMassFunction/Wright2017.hdf5
+    - filename: GalaxyStellarMassFunction/Ilbert2013_z000p200.hdf5
+    - filename: GalaxyStellarMassFunction/Ilbert2013_z000p500.hdf5
+    - filename: GalaxyStellarMassFunction/Ilbert2013_z000p800.hdf5
+    - filename: GalaxyStellarMassFunction/Ilbert2013_z001p100.hdf5
+    - filename: GalaxyStellarMassFunction/Ilbert2013_z001p500.hdf5
+    - filename: GalaxyStellarMassFunction/Ilbert2013_z002p000.hdf5
+    - filename: GalaxyStellarMassFunction/Ilbert2013_z002p500.hdf5
+    - filename: GalaxyStellarMassFunction/Ilbert2013_z003p000.hdf5
+
