--- a/bahamas/auto_plotter/star_formation_rates.yml
+++ b/bahamas/auto_plotter/star_formation_rates.yml
@@ -295,6 +295,7 @@ stellar_mass_passive_fraction_30:
   observational_data:
     - filename: GalaxyStellarMassPassiveFraction/Gilbank2010.hdf5
     - filename: GalaxyStellarMassPassiveFraction/Moustakas2013.hdf5
+    - filename: GalaxyStellarMassPassiveFraction/Behroozi2019.hdf5
 
 stellar_mass_passive_fraction_100:
   type: "2dhistogram"
@@ -329,6 +330,7 @@ stellar_mass_passive_fraction_100:
   observational_data:
     - filename: GalaxyStellarMassPassiveFraction/Gilbank2010.hdf5
     - filename: GalaxyStellarMassPassiveFraction/Moustakas2013.hdf5
+    - filename: GalaxyStellarMassPassiveFraction/Behroozi2019.hdf5
 
 star_formation_rate_function_100:
   type: "massfunction"
