--- a/eagle-xl/auto_plotter/galaxy_sizes.yml
+++ b/eagle-xl/auto_plotter/galaxy_sizes.yml
@@ -162,6 +162,7 @@ stellar_mass_projected_galaxy_size_active_only_100:
     caption: Only shows active galaxies defined based on their sSFRs.
     section: Sizes
   observational_data:
+    - filename: GalaxyStellarMassGalaxySize/VanDerWel_blue.hdf5
     - filename: GalaxyStellarMassGalaxySize/Lange2015HBand.hdf5
     - filename: GalaxyStellarMassGalaxySize/Lange2015rBand.hdf5
     - filename: GalaxyStellarMassGalaxySize/xGASS.hdf5
@@ -200,6 +201,7 @@ stellar_mass_projected_galaxy_size_active_only_30:
     section: Sizes
     show_on_webpage: false
   observational_data:
+    - filename: GalaxyStellarMassGalaxySize/VanDerWel_blue.hdf5
     - filename: GalaxyStellarMassGalaxySize/Lange2015HBand.hdf5
     - filename: GalaxyStellarMassGalaxySize/Lange2015rBand.hdf5
     - filename: GalaxyStellarMassGalaxySize/xGASS.hdf5
@@ -237,6 +239,7 @@ stellar_mass_projected_galaxy_size_passive_only_100:
     caption: Only shows passive galaxies defined based on their sSFRs.
     section: Sizes
   observational_data:
+    - filename: GalaxyStellarMassGalaxySize/VanDerWel_red.hdf5
     - filename: GalaxyStellarMassGalaxySize/Lange2015HBand.hdf5
     - filename: GalaxyStellarMassGalaxySize/Lange2015rBand.hdf5
     - filename: GalaxyStellarMassGalaxySize/xGASS.hdf5
@@ -275,6 +278,7 @@ stellar_mass_projected_galaxy_size_passive_only_30:
     section: Sizes
     show_on_webpage: false
   observational_data:
+    - filename: GalaxyStellarMassGalaxySize/VanDerWel_red.hdf5
     - filename: GalaxyStellarMassGalaxySize/Lange2015HBand.hdf5
     - filename: GalaxyStellarMassGalaxySize/Lange2015rBand.hdf5
     - filename: GalaxyStellarMassGalaxySize/xGASS.hdf5
