--- a/flamingo/auto_plotter/baryon_fractions.yml
+++ b/flamingo/auto_plotter/baryon_fractions.yml
@@ -1,10 +1,12 @@
 baryon_fraction_500:
   type: "2dhistogram"
+  select_structure_type: 10
+  comment: "Centrals only"
   legend_loc: "upper left"
   x:
     quantity: "spherical_overdensities.mass_500_rhocrit"
     units: Solar_Mass
-    start: 1e11
+    start: 1e13
     end: 1e15
   y:
     quantity: "derived_quantities.baryon_fraction_true_R500"
@@ -18,7 +20,7 @@ baryon_fraction_500:
     adaptive: true
     number_of_bins: 20
     start:
-      value: 1e11
+      value: 1e13
       units: Solar_Mass
     end:
       value: 1e15
@@ -30,11 +32,13 @@ baryon_fraction_500:
 
 gas_fraction_500:
   type: "2dhistogram"
+  select_structure_type: 10
+  comment: "Centrals only"
   legend_loc: "upper left"
   x:
     quantity: "spherical_overdensities.mass_500_rhocrit"
     units: Solar_Mass
-    start: 1e11
+    start: 1e13
     end: 1e15
   y:
     quantity: "derived_quantities.gas_fraction_true_R500"
@@ -48,7 +52,7 @@ gas_fraction_500:
     adaptive: true
     number_of_bins: 20
     start:
-      value: 1e11
+      value: 1e13
       units: Solar_Mass
     end:
       value: 1e15
@@ -66,11 +70,13 @@ gas_fraction_500:
 
 star_fraction_500:
   type: "2dhistogram"
+  select_structure_type: 10
+  comment: "Centrals only"
   legend_loc: "upper left"
   x:
     quantity: "spherical_overdensities.mass_500_rhocrit"
     units: Solar_Mass
-    start: 1e11
+    start: 1e13
     end: 1e15
   y:
     quantity: "derived_quantities.star_fraction_true_R500"
@@ -84,7 +90,7 @@ star_fraction_500:
     adaptive: true
     number_of_bins: 20
     start:
-      value: 1e11
+      value: 1e13
       units: Solar_Mass
     end:
       value: 1e15
@@ -97,11 +103,13 @@ star_fraction_500:
 
 gas_mass_500:
   type: "2dhistogram"
+  select_structure_type: 10
+  comment: "Centrals only"
   legend_loc: "upper left"
   x:
     quantity: "spherical_overdensities.mass_500_rhocrit"
     units: Solar_Mass
-    start: 1e11
+    start: 1e13
     end: 1e15
   y:
     quantity: "spherical_overdensities.mass_gas_500_rhocrit"
@@ -114,7 +122,7 @@ gas_mass_500:
     adaptive: true
     number_of_bins: 20
     start:
-      value: 1e11
+      value: 1e13
       units: Solar_Mass
     end:
       value: 1e15
